CT-628 Handle all api-calls reactive (#98)
* CT-628 Handle send-claims reactive

* CT-628 Handle send-claims reactive - fix 1 test

* CT-628 Handle send-claims reactive - fix 2. test

* fix test for posting of ElevResource

* CT-628 Handle update-claims reactive

* CT-628 Handle all gets reactive

* CT-628 Handle all updates semi-reactive

* CT-628 Added ignored test

* CT-628 Removed InvalidResponseException

---------

Co-authored-by: Hknots <Hknots99@gmail.com>