@@ -1,7 +1,6 @@
 package no.fint.betaling.service;
 
 import lombok.extern.slf4j.Slf4j;
-import no.fint.betaling.exception.InvalidResponseException;
 import no.fint.betaling.factory.ClaimFactory;
 import no.fint.betaling.factory.InvoiceFactory;
 import no.fint.betaling.model.Claim;
@@ -20,12 +19,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.data.mongodb.core.query.Update;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
-import java.net.URI;
-import java.text.ParseException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -64,86 +63,112 @@ public class ClaimService {
                 .collect(Collectors.toList());
     }
 
-    public List<Claim> sendClaims(List<String> orderNumbers) {
-        return getUnsentClaims().stream()
+    public Flux<Claim> sendClaims(List<String> orderNumbers) {
+
+        List<Claim> claims = getUnsentClaims()
+                .stream()
                 .filter(claim -> orderNumbers.contains(claim.getOrderNumber()))
-                .peek(claim -> {
-                    try {
-                        FakturagrunnlagResource invoice = invoiceFactory.createInvoice(claim);
-                        URI location = restUtil.post(invoiceEndpoint, invoice, FakturagrunnlagResource.class, claim.getOrgId());
-                        if (location != null) {
-                            claim.setInvoiceUri(location.toString());
-                            claim.setClaimStatus(ClaimStatus.SENT);
-                            claim.setStatusMessage(null);
-                            log.info("Claim {} sent, location: {}", claim.getOrderNumber(), claim.getInvoiceUri());
-                        }
-                    } catch (InvalidResponseException e) {
-                        claim.setClaimStatus(ClaimStatus.SEND_ERROR);
-                        claim.setStatusMessage(e.getMessage());
-                        log.error("Error sending claim {}: {}", claim.getOrderNumber(), e.getStatus());
-                    }
-                    updateClaimStatus(claim);
-                })
                 .collect(Collectors.toList());
+
+        return Flux.fromIterable(claims)
+                .flatMap(claim -> {
+                    FakturagrunnlagResource invoice = invoiceFactory.createInvoice(claim);
+
+                    return restUtil.post(invoiceEndpoint, invoice, FakturagrunnlagResource.class, claim.getOrgId())
+                            .doOnNext(httpHeaders -> {
+                                if (httpHeaders.getLocation() != null) {
+                                    claim.setInvoiceUri(httpHeaders.getLocation().toString());
+                                    claim.setClaimStatus(ClaimStatus.SENT);
+                                    claim.setStatusMessage(null);
+                                    log.info("Claim {} sent, location: {}", claim.getOrderNumber(), claim.getInvoiceUri());
+                                    updateClaimStatus(claim);
+                                }
+                            })
+                            .doOnError(WebClientResponseException.class, ex -> {
+                                claim.setClaimStatus(ClaimStatus.SEND_ERROR);
+                                claim.setStatusMessage(ex.getMessage());
+                                log.error("Error sending claim {}: {}", claim.getOrderNumber(), ex.getStatusCode());
+                                updateClaimStatus(claim);
+                            })
+                            .thenReturn(claim);
+                });
     }
 
     public void updateSentClaims() {
         getSentClaims().forEach(claim -> {
-            try {
-                HttpHeaders headers = restUtil.head(claim.getInvoiceUri());
-                if (headers.getLocation() != null) {
-                    claim.setInvoiceUri(headers.getLocation().toString());
-                    claim.setClaimStatus(ClaimStatus.ACCEPTED);
-                    log.info("Claim {} accepted, location: {}", claim.getOrderNumber(), claim.getInvoiceUri());
-                } else {
-                    log.info("Claim {} not updated", claim.getOrderNumber());
-                }
-                claim.setStatusMessage(null);
-            } catch (InvalidResponseException e) {
-                if (e.getStatus() == HttpStatus.GONE) {
-                    log.info("Claim {} gone from consumer -- retry sending!", claim.getOrderNumber());
-                    claim.setClaimStatus(ClaimStatus.SEND_ERROR);
-                    claim.setInvoiceUri(null);
-                } else {
-                    try {
-                        String result = restUtil.get(String.class, claim.getInvoiceUri());
-                        log.error("Unexpected result! {}", result);
-                    } catch (InvalidResponseException e2) {
-                        if (e2.getStatus().is4xxClientError()) {
-                            claim.setClaimStatus(ClaimStatus.ACCEPT_ERROR);
-                        } else if (e2.getStatus().is5xxServerError()) {
-                            claim.setClaimStatus(ClaimStatus.SEND_ERROR);
+            restUtil.head(claim.getInvoiceUri())
+                    .doOnNext(headers -> {
+                        if (headers.getLocation() != null) {
+                            claim.setInvoiceUri(headers.getLocation().toString());
+                            claim.setClaimStatus(ClaimStatus.ACCEPTED);
+                            log.info("Claim {} accepted, location: {}", claim.getOrderNumber(), claim.getInvoiceUri());
+                        } else {
+                            log.info("Claim {} not updated", claim.getOrderNumber());
                         }
-                        claim.setStatusMessage(e2.getMessage());
-                        log.warn("Error accepting claim {} [{}]: [{}] {}", claim.getOrderNumber(), claim.getClaimStatus(), e2.getStatus(), e2.getMessage());
-                    }
-                }
-            } catch (Exception e) {
-                log.warn("Error updating claim {} [{}]", claim.getOrderNumber(), claim.getClaimStatus());
-                log.error("Exception: " + e.getMessage(), e);
-            }
-            updateClaimStatus(claim);
+                        claim.setStatusMessage(null);
+                        updateClaimStatus(claim);
+                    })
+                    .doOnError(WebClientResponseException.class, e -> {
+                        if (e.getStatusCode() == HttpStatus.GONE) {
+                            log.info("Claim {} gone from consumer -- retry sending!", claim.getOrderNumber());
+                            claim.setClaimStatus(ClaimStatus.SEND_ERROR);
+                            claim.setInvoiceUri(null);
+                            updateClaimStatus(claim);
+                        } else {
+                            setClaimStatusFromFint(claim);
+                        }
+                    })
+                    .doOnError(e -> {
+                        log.warn("Error updating claim {} [{}]", claim.getOrderNumber(), claim.getClaimStatus());
+                        log.error("Exception: " + e.getMessage(), e);
+                    })
+                    .subscribe();
         });
+    }
+
+    private void setClaimStatusFromFint(Claim claim) {
+
+        restUtil.get(String.class, claim.getInvoiceUri())
+                .flatMap(result -> {
+                    log.error("Unexpected result! {}", result);
+                    return Mono.empty(); // Brukes når det ikke er behov for å returnere en verdi fra flatMap
+                })
+                .doOnError(WebClientResponseException.class, e2 -> {
+                    if (e2.getStatusCode().is4xxClientError()) {
+                        claim.setClaimStatus(ClaimStatus.ACCEPT_ERROR);
+                    } else if (e2.getStatusCode().is5xxServerError()) {
+                        claim.setClaimStatus(ClaimStatus.SEND_ERROR);
+                    }
+                    claim.setStatusMessage(e2.getMessage());
+                    updateClaimStatus(claim);
+                    log.warn("Error accepting claim {} [{}]: [{}] {}", claim.getOrderNumber(), claim.getClaimStatus(), e2.getStatusCode(), e2.getMessage());
+                })
+                .onErrorResume(e -> Mono.empty()) // Håndterer andre feil og fortsetter
+                .subscribe();
     }
 
     public void updateAcceptedClaims() {
         // TODO Accepted claims should be checked less often
         getAcceptedClaims().forEach(claim -> {
-            try {
-                FakturagrunnlagResource invoice = restUtil.get(FakturagrunnlagResource.class, claim.getInvoiceUri());
-                ClaimStatus newStatus = updateClaim(invoice);
-                claim.setClaimStatus(newStatus);
-                claim.setStatusMessage(null);
-                log.info("Claim {} updated", claim.getOrderNumber());
-            } catch (InvalidResponseException e) {
-                claim.setClaimStatus(ClaimStatus.UPDATE_ERROR);
-                claim.setStatusMessage(e.getMessage());
-                log.error("Error updating claim {}: [{}] {}", claim.getOrderNumber(), e.getStatus(), e.getMessage());
-            } catch (Exception e) {
-                log.warn("Error updating claim {} [{}]", claim.getOrderNumber(), claim.getClaimStatus());
-                log.error("Exception: " + e.getMessage(), e);
-            }
-            updateClaimStatus(claim);
+
+            restUtil.get(FakturagrunnlagResource.class, claim.getInvoiceUri())
+                    .doOnNext(fakturagrunnlagResource -> {
+                        ClaimStatus newStatus = updateClaim(fakturagrunnlagResource);
+                        claim.setClaimStatus(newStatus);
+                        claim.setStatusMessage(null);
+                        log.info("Claim {} updated", claim.getOrderNumber());
+                        updateClaimStatus(claim);
+                    })
+                    .doOnError(WebClientResponseException.class, e -> {
+                        claim.setClaimStatus(ClaimStatus.UPDATE_ERROR);
+                        claim.setStatusMessage(e.getMessage());
+                        log.error("Error updating claim {}: [{}] {}", claim.getOrderNumber(), e.getStatusCode(), e.getMessage());
+                        updateClaimStatus(claim);
+                    })
+                    .doOnError(e -> {
+                        log.warn("Error updating claim {} [{}]", claim.getOrderNumber(), claim.getClaimStatus());
+                        log.error("Exception: " + e.getMessage(), e);
+                    });
         });
     }
 
@@ -170,8 +195,8 @@ public class ClaimService {
         List<FakturaResource> fakturaList = invoice.getFaktura()
                 .stream()
                 .map(Link::getHref)
-                .map(uri -> restUtil.get(FakturaResource.class, uri))
-                .collect(Collectors.toList());
+                .map(uri -> restUtil.get(FakturaResource.class, uri).block())
+                .toList();
 
         updater.accept("invoiceNumbers", fakturaList.stream()
                 .map(FakturaResource::getFakturanummer)
@@ -273,7 +298,7 @@ public class ClaimService {
                 .forEach(this::updateClaimStatus);
     }
 
-    public List<Claim> getClaims(ClaimsDatePeriod period, String organisationNumber, ClaimStatus[] statuses) throws ParseException {
+    public List<Claim> getClaims(ClaimsDatePeriod period, String organisationNumber, ClaimStatus[] statuses) {
 
         return claimRepository.getClaims(
                 queryService.queryByDateAndSchoolAndStatus(
